Splash Screen feita, cores adicionadas para uso futuro e um novo tipo de letra "Poppins"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">NewPetFriend</string>
+
+    <!-- Splash screen -->
+    <string name="nome_splash">New Pet Friend</string>
+    <string name="imagem_logotipo">cao e gato</string>
 </resources>
