Método de verificação dos campos está completo (LoginActivity)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="registar">Registar</string>
     <string name="iniciar_sessao">Iniciar sessão</string>
 
-    <string name="erro_email_e_password_vazio">ERRO: </string>
+    <string name="erro_email_e_password_vazio">ERRO: Nenhum dos campos está preenchido!</string>
     <string name="erro_email_vazio">ERRO: Email não foi introduzido</string>
-    <string name="erro_password_vazio"></string>
+    <string name="erro_password_vazio">ERRO: Palavra-passe não foi introduzido</string>
 
     <!-- Misc -->
     <string name="Lorem_Ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum orci sed turpis dapibus auctor. Aenean malesuada nunc at efficitur dictum. Maecenas a quam non mi lobortis condimentum. Phasellus in feugiat lectus, eu rutrum lectus. Phasellus purus nulla, laoreet eget enim non, interdum molestie urna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam aliquam metus erat, vel eleifend lorem aliquet quis. Donec placerat accumsan neque, eget feugiat ex tempor vel.</string>
