--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,4 +7,7 @@
     <string name="exemplo_email">JohnDoe@mail.com</string>
     <string name="registar">Register</string>
     <string name="iniciar_sessao">LogIn</string>
+    <string name="erro_email_e_password_vazio">ERROR: Neither of the text fields were inserted</string>
+    <string name="erro_email_vazio">ERROR: Email was not inserted</string>
+    <string name="erro_password_vazio">ERROR: Password was not inserted</string>
 </resources>
