Layout main activity

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">NewPetFriend</string>
     <string name="imagem_logotipo">dog and cat</string>
     <string name="email">Email:</string>
     <string name="palavra_passe">Password</string>
     <string name="exemplo_email">JohnDoe@mail.com</string>
     <string name="registar">Register</string>
     <string name="iniciar_sessao">LogIn</string>
+    <string name="caes">Dogs</string>
+    <string name="gatos">Cats</string>
+    <string name="ambos">Both</string>
+    <string name="textoInicial">Lorem</string>
     <string name="erro_email_e_password_vazio">ERROR: Neither of the text fields were inserted</string>
     <string name="erro_email_vazio">ERROR: Email was not inserted</string>
     <string name="erro_password_vazio">ERROR: Password was not inserted</string>
