--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -17,4 +17,5 @@
     <string name="cao" translatable="false">dog</string>
     <string name="erro_password_vazia">ERROR: Password was not inserted</string>
     <string name="erro_utilizador_ja_existe">ERROR: User already exists</string>
+    <string name="intro">NewPetFriend looks for a family to our animals, giving to them a new opportunity for happiness</string>
 </resources>
