--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="exemplo_email">ZeNinguem@mail.com</string>
     <string name="registar">Registar</string>
     <string name="iniciar_sessao">Iniciar sessão</string>
+    <string name="efetue_login_conta_criada">Efetue o login com a conta criada</string>
 
     <string name="erro_email_e_password_vazio">ERRO: Nenhum dos campos está preenchido</string>
     <string name="erro_email_vazio">ERRO: Email não foi introduzido</string>
