--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="cao" translatable="false">cao</string>
     <string name="imageAmbos" translatable="false">ambos</string>
     <string name="imagegato" translatable="false">imageGato</string>
+    <string name="title_activity_maps_new_pet_friend">MapsNewPetFriend</string>
 </resources>
 
-<!-- NewPetFriend visa a procurar uma nova familia para os nossos animais! Dê uma outra oportunidade de serem ambos felizes. -->
+    <!-- NewPetFriend visa a procurar uma nova familia para os nossos animais! Dê uma outra oportunidade de serem ambos felizes. -->
