Adicionei string de erro para quando o utilizador insere o numero de idade negativo, também destaquei a letra dos TextViews do activity_admin e activity_login

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -43,5 +43,6 @@
     <string name="animal_encontrado">Animal found</string>
     <string name="animal_nao_encontrado">Animal not found</string>
     <string name="cao">Dog</string>
+    <string name="erro_idade_menor_que_zero">ERROR: Age can\'t be less than zero</string>
 
 </resources>
