--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -44,5 +44,8 @@
     <string name="animal_nao_encontrado">Animal not found</string>
     <string name="cao">Dog</string>
     <string name="erro_idade_menor_que_zero">ERROR: Age can\'t be less than zero</string>
+    <string name="permission_required_toast">Location permission is required.</string>
+    <string name="permission_rationale_location">These permissions are required for the application to run correctly.</string>
+    <string name="location_permission_denied">These permissions are required for the application to run correctly. Please try again and enable the necessary application permissions. If these permissions were denied previously, you can enable them manually in the system settings.</string>
 
 </resources>
