Já é possivel clicar numa linha na lista dos animais (activity_animal_list) para que seja apresentado dados sobre o animal selecionado (activity_pagina_individual)

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,7 +31,7 @@
     <string name="animal_list">Animal List</string>
     <string name="field_name">Name:</string>
     <string name="macho">Male</string>
-    <string name="instituicao">Instituition</string>
+    <string name="instituicao">Institution</string>
     <string name="gato">Cat</string>
     <string name="raca">Breed</string>
     <string name="femea">Female</string>
